<resources>
    <string name="app_name">Blog Viewer</string>
    <string name="searching_posting">포스팅 검색중입니다.</string>
    <string name="textview_result">https://kakaroo.tistroy.com</string>
    <string name="setting">설정</string>
    <string name="reset_list">리셋</string>
    <string name="hint">도움말</string>
    <string name="title_activity_settings">설정</string>
    <string name="editor_text">PageNo or 검색어</string>

    <!-- Settings Hint -->
    <string name="hint1_text">1. Blog web page에서 HTML이 어떻게 구성되어 있는지 소스보기로 확인.</string>
    <string name="hint2_text">2. 읽어올 태그들을 찾아 입력. (문법은 JSoup을 따른다. 예> class는 앞에 "." 을 붙인다)</string>

    <!-- Preference Titles -->
    <string name="category_header">URL 카테고리</string>
    <string name="category_tag">TAG 카테고리</string>
    <string name="category_page">PAGE 카테고리</string>

    <!-- keyword Preferences -->
    <string name="blog_url">URL</string>

    <!-- key Preferences -->
    <string name="pref_key_input_url">url_input_key</string>
    <string name="pref_key_article_tag">article_tag_key</string>
    <string name="pref_key_category_tag">category_tag_key</string>
    <string name="pref_key_articleLink_tag">articleLink_tag_key</string>
    <string name="pref_key_title_tag">title_tag_key</string>
    <string name="pref_key_date_tag">date_tag_key</string>
    <string name="pref_key_image_tag">image_tag_key</string>
    <string name="pref_key_summary_tag">summary_tag_key</string>

    <!-- tag Preferences -->
    <string name="article_tag_name">main article tag</string>
    <string name="category_tag_name">category tag</string>
    <string name="link_tag_name">article link tag</string>
    <string name="title_tag_name">title tag</string>
    <string name="date_tag_name">date tag</string>
    <string name="image_tag_name">image tag</string>
    <string name="summary_tag_name">content tag</string>

    <string name="article_maxnum">가져올 PAGE 최대 수</string>


</resources>