<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/category_header"
        app:iconSpaceReserved="false"
        app:key="url_category_key">

        <EditTextPreference
            app:key="@string/pref_key_input_url"
            app:title="@string/blog_url"
            app:useSimpleSummaryProvider="false"
            app:summary=""
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>


    <PreferenceCategory app:title="@string/category_tag"
        app:iconSpaceReserved="false"
        app:key="tag_category_key">

        <EditTextPreference
            app:key="@string/pref_key_article_tag"
            app:title="@string/article_tag_name"
            app:useSimpleSummaryProvider="false"
            app:summary="article"
            app:iconSpaceReserved="false"/>

        <EditTextPreference
            app:key="@string/pref_key_articleLink_tag"
            app:title="@string/link_tag_name"
            app:useSimpleSummaryProvider="false"
            app:summary="a.link-article"
            app:iconSpaceReserved="false"/>

        <EditTextPreference
            app:key="@string/pref_key_image_tag"
            app:title="@string/image_tag_name"
            app:useSimpleSummaryProvider="false"
            app:summary="img.img-thumbnail"
            app:iconSpaceReserved="false"/>

        <EditTextPreference
            app:key="@string/pref_key_title_tag"
            app:title="@string/title_tag_name"
            app:useSimpleSummaryProvider="false"
            app:summary=".title"
            app:iconSpaceReserved="false"/>

        <EditTextPreference
            app:key="@string/pref_key_summary_tag"
            app:title="@string/summary_tag_name"
            app:useSimpleSummaryProvider="false"
            app:summary=".summary"
            app:iconSpaceReserved="false"/>

        <EditTextPreference
            app:key="@string/pref_key_category_tag"
            app:title="@string/category_tag_name"
            app:useSimpleSummaryProvider="false"
            app:summary="a.link-category"
            app:iconSpaceReserved="false"/>

        <EditTextPreference
            app:key="@string/pref_key_date_tag"
            app:title="@string/date_tag_name"
            app:useSimpleSummaryProvider="false"
            app:summary=".date"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/category_page"
        app:iconSpaceReserved="false"
        app:key="page_category_key">

        <EditTextPreference
            app:key="page_max_num_key"
            app:title="@string/article_maxnum"
            app:useSimpleSummaryProvider="false"
            app:summary="50"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

</PreferenceScreen>